Closed Bug 895805 Opened 11 years ago Closed 11 years ago

"ASSERTION: nsTHashtable was not initialized properly" after adopting textarea

Categories

(Core :: XBL, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: jruderman, Assigned: wchen)

Details

(Keywords: assertion, crash, testcase, Whiteboard: [fuzzblocker])

Attachments

(3 files)

Attached file testcase
###!!! ASSERTION: nsTHashtable was not initialized properly.: 'mTable.entrySize', file nsTHashtable.h, line 142

Probably a regression from bug 796061 or one of the others in the last push:
http://hg.mozilla.org/mozilla-central/pushloghtml?changeset=0d0263a58f06
Attached file crash stack
Assignee: nobody → wchen
Whiteboard: [fuzzblocker]
Comment on attachment 781287 [details] [diff] [review]
Ensure nsBindingManager hashtable is initialized before use.

We definitely need this (and it's correct), but I was wondering aloud to wchen on IRC if we should be moving the adopted element from the bound content set of its old binding manager to the bound content set of its new binding manager on adoption.

We don't need to answer that question before landing this patch, though.
Attachment #781287 - Flags: review?(mrbkap) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/299df147d0e0
Flags: in-testsuite+
OS: Mac OS X → All
Hardware: x86_64 → All
https://hg.mozilla.org/mozilla-central/rev/299df147d0e0
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: