Bug 895805 - Ensure nsBindingManager hashtable is initialized before use. r=mrbkap